--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ f<!DOCTYPE html>
             <!-- House 2 -->
             <div class="bg-purple-800 bg-opacity-30 rounded-xl shadow-lg overflow-hidden md:flex flex-row-reverse">
                 <div class="md:w-1/2">
-                    <img src="images/Gemini_Generated_Image_mkh9ddmkh9ddmkh9.png" alt="House 2 Interior" class="w-full h-64 object-cover md:h-full rounded-r-xl">
+                    <img src="images/Gemini_Generated_Image_mkh9ddmkh9ddmkh9.pngBPB" alt="House 2 Interior" class="w-full h-64 object-cover md:h-full rounded-r-xl">
                 </div>
                 <div class="p-6 md:w-1/2 flex flex-col justify-center">
                     <h3 class="text-2xl sm:text-3xl font-semibold mb-3 text-white">Cozy Urban Apartment</h3>
